Adds buildSelector to Dynamic Selection
This change introduces the buildSelector method, which is responsible
for acquiring the meta-data responsible for informing the selection of
classifiers in the classification phase.

--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,10 @@
     	<artifactId>mulan</artifactId>
     	<version>1.4.0</version>
     </dependency>
+    <dependency>
+    	<groupId>org.mockito</groupId>
+    	<artifactId>mockito-core</artifactId>
+    	<version>2.11.0</version>
+    </dependency>
   </dependencies>
 </project>
