--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,60 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  
+  <build>
+  	<plugins>
+  		<plugin>
+	  		<groupId>org.apache.maven.plugins</groupId>
+	  		<artifactId>maven-assembly-plugin</artifactId>
+	  		<version>2.6</version>
+	  		<executions>
+	  			<execution>
+	  				<id>build-a</id>
+	  				<phase>package</phase>
+	  				<goals>
+		  				<goal>single</goal>
+		  			</goals>
+		  			<configuration>
+	                	<archive>
+		                	<manifest>
+		                    	<mainClass>
+		                        	br.ufpe.cin.vat.jmcs.SelectionComparisonExperiment
+		                    	</mainClass>
+		                	</manifest>
+	                	</archive>
+		                <descriptorRefs>
+		                    <descriptorRef>jar-with-dependencies</descriptorRef>
+		                </descriptorRefs>
+		                <finalName>${artifactId}-${version}-comparison</finalName>
+		                <appendAssemblyId>false</appendAssemblyId>
+	            	</configuration>
+	        	</execution>
+	        	<execution>
+	        		<id>build-b</id>
+	  				<phase>package</phase>
+	  				<goals>
+		  				<goal>single</goal>
+		  			</goals>
+		  			<configuration>
+	                	<archive>
+		                	<manifest>
+		                    	<mainClass>
+		                        	br.ufpe.cin.vat.jmcs.MultiLabelExperiment
+		                    	</mainClass>
+		                	</manifest>
+	                	</archive>
+		                <descriptorRefs>
+		                    <descriptorRef>jar-with-dependencies</descriptorRef>
+		                </descriptorRefs>
+		                <finalName>${artifactId}-${version}-tuning</finalName>
+		                <appendAssemblyId>false</appendAssemblyId>
+	            	</configuration>
+	        	</execution>
+	    	</executions>
+		</plugin>
+  	</plugins>
+  </build>
 
   <dependencies>
     <dependency>
@@ -37,4 +91,5 @@
     	<version>2.11.0</version>
     </dependency>
   </dependencies>
+  
 </project>
